--- a/smart_crop_recommendation.ipynb
+++ b/smart_crop_recommendation.ipynb
@@ -17,8 +17,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "## Load Dataset\n",
-    "url = 'https://raw.githubusercontent.com/AI-Pathshala/Crop-Recommendation-System-Dataset/master/Crop_recommendation.csv'\n",
-    "data = pd.read_csv(url)\n",
+    "data = pd.read_csv('Crop_recommendation.csv')\n",
     "\n",
     "## Explore Dataset\n",
     "print(data.head())\n",
